--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^5.0.1"
+    "mongodb": "^5.0.1",
+    "vercel": "^28.15.6"
   }
 }
